--- a/.github/workflows/bashtest.yml
+++ b/.github/workflows/bashtest.yml
@@ -23,10 +23,16 @@ jobs:
           sudo apt-get install -y gdal-bin python3-gdal
       - name: Run bash tests
         env:
+          WEBDAV_HOSTNAME: ${{ secrets.WEBDAV_HOSTNAME }}
+          WEBDAV_LOGIN: ${{ secrets.WEBDAV_LOGIN }}
+          WEBDAV_PASSWORD: ${{ secrets.WEBDAV_PASSWORD }}
           FIRMS_MAP_KEY: ${{ secrets.FIRMS_MAP_KEY }}
           COPERNICUS_AWS_ACCESS_KEY_ID: ${{ secrets.COPERNICUS_AWS_ACCESS_KEY_ID }}
           COPERNICUS_AWS_SECRET_ACCESS_KEY: ${{ secrets.COPERNICUS_AWS_SECRET_ACCESS_KEY }}
         run: |
+          echo "WEBDAV_HOSTNAME: $WEBDAV_HOSTNAME"
+          echo "WEBDAV_LOGIN: $WEBDAV_LOGIN"
+          echo "WEBDAV_PASSWORD: $WEBDAV_PASSWORD"
           echo "FIRMS_MAP_KEY: $FIRMS_MAP_KEY"
           echo "COPERNICUS_AWS_ACCESS_KEY_ID: $COPERNICUS_AWS_ACCESS_KEY_ID"
           echo "COPERNICUS_AWS_SECRET_ACCESS_KEY: $COPERNICUS_AWS_SECRET_ACCESS_KEY"
