--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,6 +28,9 @@ jobs:
           FIRMS_MAP_KEY: ${{ secrets.FIRMS_MAP_KEY }}
           COPERNICUS_AWS_ACCESS_KEY_ID: ${{ secrets.COPERNICUS_AWS_ACCESS_KEY_ID }}
           COPERNICUS_AWS_SECRET_ACCESS_KEY: ${{ secrets.COPERNICUS_AWS_SECRET_ACCESS_KEY }}
+          S3_STORAGE_ENDPOINT_URL: ${{ secrets.S3_STORAGE_ENDPOINT_URL }}
+          S3_STORAGE_AWS_ACCESS_KEY_ID: ${{ secrets.S3_STORAGE_AWS_ACCESS_KEY_ID }}
+          S3_STORAGE_AWS_SECRET_ACCESS_KEY: ${{ secrets.S3_STORAGE_AWS_SECRET_ACCESS_KEY }}
         run: |
           echo "WEBDAV_HOSTNAME: $WEBDAV_HOSTNAME"
           echo "WEBDAV_LOGIN: $WEBDAV_LOGIN"
@@ -35,4 +38,8 @@ jobs:
           echo "FIRMS_MAP_KEY: $FIRMS_MAP_KEY"
           echo "COPERNICUS_AWS_ACCESS_KEY_ID: $COPERNICUS_AWS_ACCESS_KEY_ID"
           echo "COPERNICUS_AWS_SECRET_ACCESS_KEY: $COPERNICUS_AWS_SECRET_ACCESS_KEY"
+          echo "S3_STORAGE_ENDPOINT_URL: $S3_STORAGE_ENDPOINT_URL"
+          echo "S3_STORAGE_AWS_ACCESS_KEY_ID: $S3_STORAGE_AWS_ACCESS_KEY_ID"
+          echo "S3_STORAGE_AWS_SECRET_ACCESS_KEY: $S3_STORAGE_AWS_SECRET_ACCESS_KEY"
+
           pytest
